--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,4 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/simple-web-app:latest
 
       - name: Trigger Render Deploy
-        uses: johnbeynon/render-deploy-action@v0.0.8
-        with:
-          deploy-hook: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+              run: curl "${{ secrets.RENDER_DEPLOY_HOOK_URL }}"
